deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-gateway
spec:
  ports:
    - nodePort: 31000
      port: 8100
      targetPort: 8100
  selector:
    app: spring-gateway
  type: LoadBalancer
